# lab2

./: CMakeLists.txt
lab2/: CMakeLists.txt  lab2.cpp
